--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <!-- Hola -->
+      <!-- Hola mundo-->
       <div class="container-fluid">
         <div class="row">
           <div class="col-1">1</div>
@@ -45,7 +45,7 @@
                     class="d-block w-100"
                     alt="..."
                   />
-                </div>
+                </div>>
                 <div class="carousel-item" data-bs-interval="6000">
                   <img
                     src="./img/baners/Xapo_Bitcoin_baner.jpg"
