agregado index y un footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <main>
-      <!-- Hola mundo-->
       <div class="container-fluid">
         <div class="row">
           <div class="col-1">1</div>
@@ -45,7 +44,7 @@
                     class="d-block w-100"
                     alt="..."
                   />
-                </div>>
+                </div>
                 <div class="carousel-item" data-bs-interval="6000">
                   <img
                     src="./img/baners/Xapo_Bitcoin_baner.jpg"
@@ -95,17 +94,37 @@
             </div>
 
             <div class="row p-5">
-              <div class="col m-5 bg-primary">
-                lo
-                <hr />
-                <div>dad</div>
+              <div class="col m-5">
+                <div class="row text-center">
+                  <div class="col border border-dark" id="box-btc">
+                    <h5><img src="./img/bitcoin-cash-cryptocurrency.512x512.png" alt="" > Bitcoin</h5>
+                    <hr>
+                    <p>US$ 66703</p>
+                  </div>
+                  <div class="col border border-dark" id="box-eth">
+                    <h5><img src="./img/ethereum-classic-cryptocurrency.512x512.png" alt="" > Ethereum</h5>
+                    <hr>
+                    <p>US$ 3092</p>
+                  </div>
+                </div>
               </div>
-              <div class="col m-5 bg-warning">
-                sdf
-                <hr />
-                <div>ad</div>
+              <div class="col m-5">
+                <div class="row text-center">
+                  <div class="col border border-white" id="box-usd">
+                    <h5><img src="./img/Usd.png" alt=""> USD</h5>
+                    <hr>
+                    <p>US$ 1</p>
+                  </div>
+                  <div class="col border border-white" id="box-ars">
+                    <h5><img src="./img/Ars.png" alt=""> ARS</h5>
+                    <hr>
+                    <p>ARS$ 1100</p>
+                  </div>
+  
+                </div>
               </div>
             </div>
+  
 
             <div class="row">
               <div class="col d-flex justify-content-center">
@@ -150,6 +169,28 @@
           </div>
         </div>
       </div>
+      <footer class="p-5 mt-5 text-white">
+        <div class="row">
+          <div class="col">
+            <h3>Enlaces</h3>
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Acerca de</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Contacto</h3>
+            <p>Correo electrónico: info@example.com</p>
+            <p>Teléfono: 123-456-7890</p>
+          </div>
+          <div class="col">
+            <h3>Derechos de Autor</h3>
+            <p>(c) 2024 Mi Sitio Web. Todos los derechos reservados.</p>
+          </div>
+        </div>
+      </footer>
+    
     </main>
 
     <script
