--- a/index.html
+++ b/index.html
@@ -151,6 +151,30 @@
         </div>
       </div>
     </main>
+    
+    <!-- FOOTER -->
+
+    <footer>
+      <section class="contacto">
+        <div class="contenido-seccion">
+          <h2 class="titulo-seccion">Contactos</h2>
+          <div class="fila">
+            <div class="col">
+              <h2>Teléfono</h2>
+              <span>012-3456-7890</span>
+            </div>
+            <div class="col">
+              <h2>Correo</h2>
+              <span>maito@gmail.com</span>
+            </div>
+            <div class="col">
+              <h2>Página Web</h2>
+              <span>pagina.com</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
