--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
           <div id="carouselExampleInterval" class="carousel carousel-container mb-3" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="./img/baners/BingX_baner.png" class="d-block w-100" alt="..." />
+                <img src="./assets/baners/BingX_baner.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/baners/CoinEx_baner.png" class="d-block w-100" alt="..." />
+                <img src="./assets/" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="4000">
-                <img src="./img/baners/cryptomarket_baner.png" class="d-block w-100" alt="..." />
+                <img src="./assets/baners/cryptomarket_baner.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="6000">
-                <img src="./img/baners/Xapo_Bitcoin_baner.jpg" class="d-block w-100" alt="..." />
+                <img src="./assets/baners/Xapo_Bitcoin_baner.jpg" class="d-block w-100" alt="..." />
               </div>
             </div>
           </div>
