--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <main>
     <div class="container-fluid">
       <div class="row">
         <div class="col-auto">
@@ -47,20 +46,21 @@
               </li>
             </ul>
           </div>
+        </div>
         <div class="col dashboard p-3">
           <div id="carouselExampleInterval" class="carousel carousel-container mb-3" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="./assets/baners/BingX_baner.png" class="d-block w-100" alt="..." />
+                <img src="../assets/baners/BingX_baner.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/" class="d-block w-100" alt="..." />
+                <img src="../assets/baners/CoinEx_baner.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="4000">
-                <img src="./assets/baners/cryptomarket_baner.png" class="d-block w-100" alt="..." />
+                <img src="../assets/baners/cryptomarket_baner.png" class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item" data-bs-interval="6000">
-                <img src="./assets/baners/Xapo_Bitcoin_baner.jpg" class="d-block w-100" alt="..." />
+                <img src="../assets/baners/Xapo_Bitcoin_baner.jpg" class="d-block w-100" alt="..." />
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
         </div>
       </div>
     </div>
-  </main>
+
   <footer class="p-5 mt-5 text-white">
     <div class="row">
       <div class="col">
