--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +13,14 @@
 
 <body class="d-flex justify-content-center align-items-center">
   <div class="login bg-transparent">
-    <form action="">
+    <form id="login-form">
       <h1>Login</h1>
       <div class="input-box">
-        <input type="text" placeholder="Usuario" required>
+        <input type="text" placeholder="Usuario" name="usuario" required>
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Contraseña" required>
+        <input type="password" placeholder="Contraseña" name="password" required>
         <i class="bx bxs-lock-alt"></i>
       </div>
       <div class="remember-forgot">
@@ -35,8 +34,12 @@
           <a href="./index.html">Volver al incio</a>
         </p>
       </div>
+      <div id="error-message" class="mt-3 text-danger"></div>
     </form>
   </div>
+
+  <script src="../helpers/index.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
