--- a/html/registro.html
+++ b/html/registro.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +8,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/registro.css">
 </head>
-
 <body>
     <div class="container p-5 d-flex justify-content-center align-items-center">
-        <form class="p-2 needs-validation text-center" novalidate>
-            <div class="d-flex justify-content-end mx-1">
+        <form id="registroForm" class="p-2 needs-validation text-center" novalidate>
+            <div class="d-flex justify-content-end mx-2">
                 <a href="./index.html">
                     <i class="bi bi-x-octagon fs-1 text-white link-danger"></i>
                 </a>
@@ -24,7 +22,7 @@
                     <div>
                         <label class="col col-form-label">Nombre/s</label>
                         <div class="input-group box-form">
-                            <input type="text" class="form-control" aria-label="Last name" required>
+                            <input type="text" class="form-control" aria-label="Last name" name="nombre" required>
                         </div>
                         <div class="valid-feedback"></div>
                     </div>
@@ -35,7 +33,7 @@
                     <div>
                         <label class="col col-form-label">Apellido/s</label>
                         <div class="input-group box-form">
-                            <input type="text" class="form-control" aria-label="Last name" required>
+                            <input type="text" class="form-control" aria-label="Last name" name="apellido" required>
                         </div>
                         <div class="valid-feedback"></div>
                     </div>
@@ -46,7 +44,7 @@
                     <div>
                         <label class="col col-form-label">Usuario</label>
                         <div class="input-group box-form">
-                            <input type="text" class="form-control" id="autoSizingInputGroup" required>
+                            <input type="text" class="form-control" id="autoSizingInputGroup" name="usuario" required>
                         </div>
                         <div class="valid-feedback"></div>
                     </div>
@@ -55,9 +53,9 @@
             <div class="row mb-3">
                 <div class="d-flex justify-content-center">
                     <div>
-                        <label class="col col-form-label mt-2">Correo Elecctronico</label>
+                        <label class="col col-form-label mt-2">Correo Electrónico</label>
                         <div class="col box-form">
-                            <input type="email" class="form-control" id="inputMail" required>
+                            <input type="email" class="form-control" name="email" required>
                         </div>
                         <div class="valid-feedback"></div>
                     </div>
@@ -69,7 +67,7 @@
                         <div>
                             <label class="col col-form-label">Contraseña</label>
                             <div class="col box-form">
-                                <input type="password" class="form-control" id="inputPw" required>
+                                <input type="password" class="form-control" name="contraseña" required>
                             </div>
                             <div class="valid-feedback"></div>
                         </div>
@@ -79,31 +77,34 @@
             <div class="row mb-3">
                 <div class="d-flex justify-content-center">
                     <div>
-                        <label class="col col-form-label">Verificacion de contraseña</label>
+                        <label class="col col-form-label">Verificación de contraseña</label>
                         <div class="col box-form">
-                            <input type="password" class="form-control" id="inputPwVerificacion" required>
+                            <input type="password" class="form-control" name="verificacion" required>
                         </div>
                         <div class="valid-feedback"></div>
                     </div>
                 </div>
                 <div id="messageContainer" class="mt-3 text-warning"></div>
             </div>
-            <div class="p-4">
+            <div id="error-message" class="mt-3 text-danger"></div> <!-- Agregado aquí -->
+            <div class="m-2 p-3">
                 <p><small>Al crear la cuenta aceptas las <a href="#" class="link">Condiciones de Uso</a> y el <a
-                            href="#" class="link">Aviso de Privacidad</a> de esta pagina</small></p>
+                            href="#" class="link">Aviso de Privacidad</a> de esta página</small></p>
             </div>
-            <div class="d-flex justify-content-evenly mt-4">
+            <div class="d-flex justify-content-evenly mt-1">
                 <button type="submit" class="btn btn-success">Crear cuenta</button>
                 <button type="reset" class="btn btn-danger">Cancelar</button>
             </div>
-            <p class="text-center mt-3"><small>¿Ya tienes cuenta? <a href="./login.html" class="link">Inciar
-                        sesion</a></small></p>
+            <div class="mt-3">
+                <p class="text-center"><small>¿Ya tienes cuenta? <a href="./login.html" class="link">Iniciar
+                    sesión</a></small></p>
+            </div>
         </form>
     </div>
-    <script src="../helpers/validaciones.js"></script>
+    <script src="../helpers/index.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
