--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="styles.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
@@ -16,11 +15,11 @@
     <form id="login-form">
       <h1>Login</h1>
       <div class="input-box">
-        <input type="text" placeholder="Usuario" name="usuario" required>
+        <input type="text" placeholder="Usuario" name="usuario" required">
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Contraseña" name="password" required>
+        <input type="password" placeholder="Contraseña" name="pwLogin" required>
         <i class="bx bxs-lock-alt"></i>
       </div>
       <div class="remember-forgot">
@@ -34,11 +33,11 @@
           <a href="./index.html">Volver al incio</a>
         </p>
       </div>
-      <div id="error-message" class="mt-3 text-danger"></div>
+      <div id="error-message" class="mt-3 text-danger text-center"></div>
     </form>
   </div>
 
-  <script src="../helpers/index.js" type="module"></script>
+  <script src="../helpers/login.js" type="module" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
