--- a/html/registro.html
+++ b/html/registro.html
@@ -86,7 +86,7 @@
                 </div>
                 <div id="messageContainer" class="mt-3 text-warning"></div>
             </div>
-            <div id="error-message" class="mt-3 text-danger"></div> <!-- Agregado aquí -->
+            <div id="error-message" class="mt-3 text-danger"></div> 
             <div class="m-2 p-3">
                 <p><small>Al crear la cuenta aceptas las <a href="#" class="link">Condiciones de Uso</a> y el <a
                             href="#" class="link">Aviso de Privacidad</a> de esta página</small></p>
@@ -101,7 +101,7 @@
             </div>
         </form>
     </div>
-    <script src="../helpers/index.js" type="module"></script>
+    <script src="../helpers/index.js" type="module" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
