--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
     <form id="login-form">
       <h1>Login</h1>
       <div class="input-box">
-        <input type="text" placeholder="Usuario" name="usuario" required">
+        <input type="text" placeholder="Usuario" name="usuario" required>
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
